# GenAIProject-MealPlanner

./: .env.example  README.MD  README.md  docker-compose.yaml  environment.yml  requirements.txt
meal-planner/: Dockerfile
meal-planner-frontend/: Dockerfile  package-lock.json  package.json
meal-planner-frontend/src/: App.jsx
meal-planner/src/: App.jsx
meal_api_without_ai/: main.py  meal_service.py  nutrition_service.py  price_service.py  requirements.txt
meal_api_without_ai/results/: drybrined_turkey.md
mealplannercrew/: .env.example  Dockerfile  README.md  app.py  meal_plan_summary.md  pyproject.toml  report.md  requirements.txt
mealplannercrew/knowledge/: user_db.json  user_preference.txt
mealplannercrew/src/database_service/: database_service.py
mealplannercrew/src/database_service/database/: meal_planner.db
mealplannercrew/src/mealplannercrew/: crew.py  main.py  settings.py
mealplannercrew/src/mealplannercrew/config/: agents.yaml  tasks.yaml
mealplannercrew/src/mealplannercrew/tools/: body_composition_energy.py  macronutrient_online_tool.py  macronutrients_tool.py  price_tool.py  recipe_tool.py
result_examples/results_with_gen_ai/: dessert_meal_example_unrealistic_profile.md  example_breakfast.md  meal_plan_breakfast_lunch_dinner_summary.md
result_examples/results_without_gen_ai/: grilled_lamb_chops_and_peppers.md
