[project]
name = "mealplannercrew"
version = "0.1.0"
description = "mealPlannerCrew using crewAI"
authors = [{ name = "Andrei Florescu", email = "e12242987@student.tuwien.ac.at" }]
requires-python = "~=3.11.0"
dependencies = [
    "crewai[tools]==1.8.0",
    "litellm<1.80.0",
    "openai~=1.83.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "python-dotenv",
    "pydantic>=2.0.0",
    "openfoodfacts",
    "sentence-transformers>=5.2.0",
    "tokenizers~=0.20.3",
    "mcp~=1.16.0",
    "langchain-huggingface>=1.2.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "torchaudio>=2.0.0",
    "portalocker>=2.7.0"
]

[project.scripts]
mealplannercrew = "mealplannercrew.main:run"
run_crew = "mealplannercrew.main:run"
train = "mealplannercrew.main:train"
replay = "mealplannercrew.main:replay"
test = "mealplannercrew.main:test"
run_with_trigger = "mealplannercrew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu118"]
index-strategy = "unsafe-best-match"